--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./app:/app/app
       - ./logs:/app/logs
-    command: sh -c "uv run python3 -m app"
+    command: sh -c "uv run python3 -m bot"
     restart: unless-stopped
     logging:
       driver: "json-file"
